[package]
name = "soroban-toolkit"
version = "0.1.0"
edition = "2021"
description = "A Rust utility library and CLI toolkit for Soroban smart contract developers on Stellar"
license = "MIT"
repository = "https://github.com/laugh-tales/soroban-toolkit"
readme = "README.md"
keywords = ["soroban", "stellar", "blockchain", "smart-contracts", "toolkit"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[lib]
name = "soroban_toolkit"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
sha2 = "0.10"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"