[package]
name = "soroban-toolkit"
version = "0.1.0"
edition = "2021"
description = "A Rust utility library and CLI toolkit for Soroban smart contract developers on Stellar"
license = "MIT"
repository = "https://github.com/laugh-tales/soroban-toolkit"
readme = "README.md"
keywords = ["stellar", "soroban", "blockchain", "smart-contracts", "web3"]

[lib]
name = "soroban_toolkit"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
base64 = "0.21"